# twitter-clone

./: .env  pyproject.toml
core/: settings.py  urls.py
front-end/: index.html  package-lock.json  package.json
front-end/src/: App.tsx  api.tsx  main.tsx  routes.tsx  styles.ts
front-end/src/components/ButtonsFeed/: index.tsx  styles.ts
front-end/src/components/ButtonsMenu/: index.tsx  styles.ts
front-end/src/components/Post/: index.tsx  styles.ts
front-end/src/components/Quack/: index.tsx  styles.ts
front-end/src/components/Sidebar/: index.tsx  styles.ts  styles.tsx
front-end/src/pages/Feed/: index.tsx  styles.ts
front-end/src/pages/Home/: index.tsx  styles.ts
posts/: models.py  serializers.py  urls.py  views.py
posts/migrations/: 0001_initial.py  0002_comment_message_notification.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
