[project]
name = "clone-twitter"
version = "0.1.0"
description = ""
authors = [
    { name = "Paula Rabelo", email = "paula_rabelo2010@hotmail.com" }
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "django>=5.1.6",
    "djangorestframework>=3.15.2",
    "djoser>=2.3.1",
    "psycopg2-binary>=2.9.10",
    "django-cors-headers>=4.7.0",
    "python-dotenv>=1.0.1",
    "pillow (>=11.1.0,<12.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
